// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentBadge — snapshots > matches snapshot: active badge with dot 1`] = `"<span style="color: rgb(49, 29, 165); background-color: rgb(227, 224, 246); border-color: rgb(182, 174, 224);" title="review-master" class="inline-flex items-center gap-1 px-1.5 py-0.5 rounded text-xs border font-mono max-w-[120px]"><span class="w-1.5 h-1.5 rounded-full bg-emerald-400 shrink-0"></span><span class="truncate">review-master</span></span>"`;

exports[`AgentBadge — snapshots > matches snapshot: inactive badge 1`] = `"<span style="color: rgb(165, 131, 29); background-color: rgb(246, 240, 224); border-color: rgb(224, 211, 174);" title="dev-front-vuejs" class="inline-flex items-center gap-1 px-1.5 py-0.5 rounded text-xs border font-mono max-w-[120px]"><!--v-if--><span class="truncate">dev-front-vuejs</span></span>"`;

exports[`ConfirmDialog — snapshots > matches snapshot: danger dialog 1`] = `
"<div to="body">
  <div class="fixed inset-0 z-[60] flex items-center justify-center bg-black/60 backdrop-blur-sm" tabindex="-1">
    <div class="w-[380px] bg-surface-primary border border-edge-default rounded-xl shadow-2xl overflow-hidden" role="alertdialog" aria-modal="true" aria-label="Delete agent?">
      <!-- Header with icon -->
      <div class="flex items-start gap-3 px-5 pt-5 pb-3">
        <!-- Icon -->
        <div class="w-9 h-9 rounded-lg flex items-center justify-center shrink-0 bg-red-500/15">
          <!-- Danger icon --><svg viewBox="0 0 16 16" fill="currentColor" class="w-4.5 h-4.5 text-red-400">
            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
            <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"></path>
          </svg>
        </div>
        <div class="flex-1 min-w-0">
          <h3 class="text-sm font-semibold text-content-primary leading-tight">Delete agent?</h3>
          <p class="text-sm text-content-secondary mt-1.5 leading-relaxed">This action is irreversible.</p>
          <!--v-if-->
        </div>
      </div><!-- Actions -->
      <div class="flex items-center justify-end gap-2 px-5 py-4 border-t border-edge-subtle bg-surface-base/50"><button class="px-4 py-2 text-sm text-content-muted hover:text-content-secondary hover:bg-surface-secondary rounded-lg transition-colors">Cancel</button><button class="px-4 py-2 text-sm font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-offset-transparent bg-red-600 hover:bg-red-500 text-white focus:ring-red-500">Delete</button></div>
    </div>
  </div>
</div>"
`;

exports[`ConfirmDialog — snapshots > matches snapshot: info dialog 1`] = `
"<div to="body">
  <div class="fixed inset-0 z-[60] flex items-center justify-center bg-black/60 backdrop-blur-sm" tabindex="-1">
    <div class="w-[380px] bg-surface-primary border border-edge-default rounded-xl shadow-2xl overflow-hidden" role="alertdialog" aria-modal="true" aria-label="Confirm action?">
      <!-- Header with icon -->
      <div class="flex items-start gap-3 px-5 pt-5 pb-3">
        <!-- Icon -->
        <div class="w-9 h-9 rounded-lg flex items-center justify-center shrink-0 bg-blue-500/15">
          <!-- Danger icon -->
          <!-- Info icon --><svg viewBox="0 0 16 16" fill="currentColor" class="w-4.5 h-4.5 text-blue-400">
            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
            <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
          </svg>
        </div>
        <div class="flex-1 min-w-0">
          <h3 class="text-sm font-semibold text-content-primary leading-tight">Confirm action?</h3>
          <p class="text-sm text-content-secondary mt-1.5 leading-relaxed">Do you want to proceed?</p>
          <!--v-if-->
        </div>
      </div><!-- Actions -->
      <div class="flex items-center justify-end gap-2 px-5 py-4 border-t border-edge-subtle bg-surface-base/50"><button class="px-4 py-2 text-sm text-content-muted hover:text-content-secondary hover:bg-surface-secondary rounded-lg transition-colors">Cancel</button><button class="px-4 py-2 text-sm font-medium rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-offset-transparent bg-blue-600 hover:bg-blue-500 text-white focus:ring-blue-500">OK</button></div>
    </div>
  </div>
</div>"
`;

exports[`ContextMenu — snapshots > matches snapshot: items with separator 1`] = `
"<div to="body">
  <div class="fixed inset-0 z-[200]">
    <div class="absolute bg-surface-primary border border-edge-default rounded-lg shadow-2xl py-1 min-w-[188px]" style="left: 50px; top: 80px;"><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Edit</button><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Add subgroup</button>
      <div class="my-1 border-t border-edge-subtle"></div><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Delete</button>
    </div>
  </div>
</div>"
`;

exports[`ContextMenu — snapshots > matches snapshot: simple items (no separator) 1`] = `
"<div to="body">
  <div class="fixed inset-0 z-[200]">
    <div class="absolute bg-surface-primary border border-edge-default rounded-lg shadow-2xl py-1 min-w-[188px]" style="left: 100px; top: 200px;"><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Rename</button><button class="w-full flex items-center px-3 py-1.5 text-sm text-left text-content-tertiary hover:bg-surface-secondary hover:text-content-primary transition-colors">Delete</button></div>
  </div>
</div>"
`;

exports[`DbSelector — snapshots > matches snapshot: home screen (no project selected) 1`] = `
"<!-- Accueil -->
<div class="h-full flex items-center justify-center">
  <div class="text-center space-y-6 max-w-sm px-6">
    <!-- Logo -->
    <div class="w-14 h-14 rounded-2xl bg-violet-500/20 border border-violet-500/30 flex items-center justify-center mx-auto"><svg viewBox="0 0 24 24" fill="none" class="w-7 h-7 text-violet-400">
        <path d="M12 2L3 7v5c0 5.25 3.75 10.15 9 11.35C17.25 22.15 21 17.25 21 12V7l-9-5z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"></path>
        <path d="M9 12l2 2 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
      </svg></div>
    <div>
      <h2 class="text-xl font-semibold text-content-primary mb-1">KanbAgent</h2>
      <p class="text-sm text-content-subtle">Visualisez les tâches de vos agents en temps réel.</p>
    </div><!-- 2 options -->
    <div class="grid grid-cols-2 gap-3">
      <!-- Ouvrir existant --><button class="flex flex-col items-center gap-2 px-4 py-5 rounded-xl border border-edge-default hover:border-content-subtle bg-surface-secondary/40 hover:bg-surface-secondary transition-all group">
        <div class="w-9 h-9 rounded-lg bg-surface-tertiary group-hover:bg-content-faint flex items-center justify-center transition-colors"><svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-content-tertiary">
            <path d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"></path>
          </svg></div>
        <div>
          <p class="text-sm font-medium text-content-secondary">Ouvrir</p>
          <p class="text-xs text-content-subtle mt-0.5">Projet existant</p>
        </div>
      </button><!-- Créer nouveau --><button class="flex flex-col items-center gap-2 px-4 py-5 rounded-xl border border-violet-500/30 hover:border-violet-500/60 bg-violet-500/5 hover:bg-violet-500/10 transition-all group">
        <div class="w-9 h-9 rounded-lg bg-violet-500/20 group-hover:bg-violet-500/30 flex items-center justify-center transition-colors"><svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-violet-400">
            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div>
          <p class="text-sm font-medium text-violet-600 dark:text-violet-300">Créer</p>
          <p class="text-xs text-content-subtle mt-0.5">Nouveau projet</p>
        </div>
      </button>
    </div>
    <!--v-if-->
    <!-- Language selector -->
    <div class="flex justify-center"><select aria-label="Language" class="bg-transparent text-content-subtle text-xs border-none focus:outline-none cursor-pointer" value="fr">
        <option value="fr">Français</option>
        <option value="en">English</option>
        <option value="es">Español</option>
        <option value="pt">Português</option>
        <option value="pt-BR">Português (Brasil)</option>
        <option value="de">Deutsch</option>
        <option value="no">Norsk</option>
        <option value="it">Italiano</option>
        <option value="ar">العربية</option>
        <option value="ru">Русский</option>
        <option value="pl">Polski</option>
        <option value="sv">Svenska</option>
        <option value="fi">Suomi</option>
        <option value="da">Dansk</option>
        <option value="tr">Türkçe</option>
        <option value="zh-CN">中文（简体）</option>
        <option value="ko">한국어</option>
        <option value="ja">日本語</option>
      </select></div>
  </div>
</div>"
`;

exports[`DbSelector — snapshots > matches snapshot: home screen with error 1`] = `
"<!-- Accueil -->
<div class="h-full flex items-center justify-center">
  <div class="text-center space-y-6 max-w-sm px-6">
    <!-- Logo -->
    <div class="w-14 h-14 rounded-2xl bg-violet-500/20 border border-violet-500/30 flex items-center justify-center mx-auto"><svg viewBox="0 0 24 24" fill="none" class="w-7 h-7 text-violet-400">
        <path d="M12 2L3 7v5c0 5.25 3.75 10.15 9 11.35C17.25 22.15 21 17.25 21 12V7l-9-5z" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"></path>
        <path d="M9 12l2 2 4-4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
      </svg></div>
    <div>
      <h2 class="text-xl font-semibold text-content-primary mb-1">KanbAgent</h2>
      <p class="text-sm text-content-subtle">Visualisez les tâches de vos agents en temps réel.</p>
    </div><!-- 2 options -->
    <div class="grid grid-cols-2 gap-3">
      <!-- Ouvrir existant --><button class="flex flex-col items-center gap-2 px-4 py-5 rounded-xl border border-edge-default hover:border-content-subtle bg-surface-secondary/40 hover:bg-surface-secondary transition-all group">
        <div class="w-9 h-9 rounded-lg bg-surface-tertiary group-hover:bg-content-faint flex items-center justify-center transition-colors"><svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-content-tertiary">
            <path d="M2 6a2 2 0 012-2h5l2 2h5a2 2 0 012 2v6a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"></path>
          </svg></div>
        <div>
          <p class="text-sm font-medium text-content-secondary">Ouvrir</p>
          <p class="text-xs text-content-subtle mt-0.5">Projet existant</p>
        </div>
      </button><!-- Créer nouveau --><button class="flex flex-col items-center gap-2 px-4 py-5 rounded-xl border border-violet-500/30 hover:border-violet-500/60 bg-violet-500/5 hover:bg-violet-500/10 transition-all group">
        <div class="w-9 h-9 rounded-lg bg-violet-500/20 group-hover:bg-violet-500/30 flex items-center justify-center transition-colors"><svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-violet-400">
            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div>
          <p class="text-sm font-medium text-violet-600 dark:text-violet-300">Créer</p>
          <p class="text-xs text-content-subtle mt-0.5">Nouveau projet</p>
        </div>
      </button>
    </div>
    <p class="text-xs text-red-700 dark:text-red-400 bg-red-100 dark:bg-red-950/40 border border-red-300 dark:border-red-800/50 rounded px-3 py-2">DB not found</p><!-- Language selector -->
    <div class="flex justify-center"><select aria-label="Language" class="bg-transparent text-content-subtle text-xs border-none focus:outline-none cursor-pointer" value="fr">
        <option value="fr">Français</option>
        <option value="en">English</option>
        <option value="es">Español</option>
        <option value="pt">Português</option>
        <option value="pt-BR">Português (Brasil)</option>
        <option value="de">Deutsch</option>
        <option value="no">Norsk</option>
        <option value="it">Italiano</option>
        <option value="ar">العربية</option>
        <option value="ru">Русский</option>
        <option value="pl">Polski</option>
        <option value="sv">Svenska</option>
        <option value="fi">Suomi</option>
        <option value="da">Dansk</option>
        <option value="tr">Türkçe</option>
        <option value="zh-CN">中文（简体）</option>
        <option value="ko">한국어</option>
        <option value="ja">日本語</option>
      </select></div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: column with 2 tasks 1`] = `
"<div class="flex flex-col flex-1 min-w-0 bg-surface-primary/50 rounded-xl border transition-colors border-edge-subtle">
  <div class="flex items-center justify-between px-3 py-2.5 border-b border-edge-subtle">
    <div class="flex items-center gap-2">
      <div class="w-2 h-2 rounded-full bg-slate-400"></div><span class="text-xs font-semibold text-content-tertiary uppercase tracking-wider">Todo</span>
    </div><span class="text-xs text-content-subtle bg-surface-secondary px-1.5 py-0.5 rounded">2</span>
  </div><!-- List mode -->
  <div class="flex-1 overflow-y-auto p-2 space-y-2 min-h-0" style="contain: content;">
    <task-card-stub task="[object Object]"></task-card-stub>
    <task-card-stub task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: empty column 1`] = `
"<div class="flex flex-col flex-1 min-w-0 bg-surface-primary/50 rounded-xl border transition-colors border-edge-subtle">
  <div class="flex items-center justify-between px-3 py-2.5 border-b border-edge-subtle">
    <div class="flex items-center gap-2">
      <div class="w-2 h-2 rounded-full bg-slate-400"></div><span class="text-xs font-semibold text-content-tertiary uppercase tracking-wider">Todo</span>
    </div><span class="text-xs text-content-subtle bg-surface-secondary px-1.5 py-0.5 rounded">0</span>
  </div><!-- List mode -->
  <div class="flex-1 overflow-y-auto p-2 space-y-2 min-h-0" style="contain: content;">
    <div class="text-xs text-content-faint text-center py-8">Aucune tâche</div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: in_progress column (drop target) 1`] = `
"<div class="flex flex-col flex-1 min-w-0 bg-surface-primary/50 rounded-xl border transition-colors border-edge-subtle">
  <div class="flex items-center justify-between px-3 py-2.5 border-b border-edge-subtle">
    <div class="flex items-center gap-2">
      <div class="w-2 h-2 rounded-full bg-cyan-400"></div><span class="text-xs font-semibold text-content-tertiary uppercase tracking-wider">In Progress</span>
    </div><span class="text-xs text-content-subtle bg-surface-secondary px-1.5 py-0.5 rounded">1</span>
  </div><!-- List mode -->
  <div class="flex-1 overflow-y-auto p-2 space-y-2 min-h-0" style="contain: content;">
    <task-card-stub task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`TabBar — snapshots > matches snapshot: empty tab bar (no tabs) 1`] = `
"<div data-v-3c3dc65a="" class="flex items-stretch border-b border-edge-default bg-surface-primary shrink-0 h-10">
  <!-- Onglet Backlog (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <rect data-v-3c3dc65a="" x="1" y="2" width="4" height="12" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="6" y="2" width="4" height="8" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="11" y="2" width="4" height="5" rx="1.5"></rect>
    </svg><span data-v-3c3dc65a="">Backlog</span>
    <!--v-if-->
  </button><!-- Onglet Stat (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <path data-v-3c3dc65a="" d="M0 11l4-5 3 3 4-6 5 3v5H0z"></path>
    </svg><span data-v-3c3dc65a="">Dashboard</span>
    <!--v-if-->
  </button><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
    </svg></button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container flex items-stretch gap-0.5 px-1.5 flex-1 min-w-0 overflow-x-scroll">
    <!-- Onglets fichiers -->
    <!-- Groupe agent -->
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
    </svg></button><!-- Bouton + WSL --><button data-v-3c3dc65a="" class="flex items-center gap-1.5 px-3 self-center text-sm font-semibold text-violet-700 bg-violet-500/15 hover:bg-violet-500/25 border border-violet-500/40 hover:border-violet-500/60 dark:text-violet-300 dark:border-violet-500/30 dark:hover:border-violet-500/50 rounded transition-all ml-1 mr-2 shrink-0 cursor-pointer" style="height: 28px;" title="Ouvrir un terminal WSL"><span data-v-3c3dc65a="" class="text-base leading-none">+</span><span data-v-3c3dc65a="">WSL</span></button>
  <div data-v-3c3dc65a="" class="w-3 shrink-0"></div>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TabBar — snapshots > matches snapshot: tab bar with one terminal tab 1`] = `
"<div data-v-3c3dc65a="" class="flex items-stretch border-b border-edge-default bg-surface-primary shrink-0 h-10">
  <!-- Onglet Backlog (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <rect data-v-3c3dc65a="" x="1" y="2" width="4" height="12" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="6" y="2" width="4" height="8" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="11" y="2" width="4" height="5" rx="1.5"></rect>
    </svg><span data-v-3c3dc65a="">Backlog</span>
    <!--v-if-->
  </button><!-- Onglet Stat (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <path data-v-3c3dc65a="" d="M0 11l4-5 3 3 4-6 5 3v5H0z"></path>
    </svg><span data-v-3c3dc65a="">Dashboard</span>
    <!--v-if-->
  </button><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
    </svg></button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container flex items-stretch gap-0.5 px-1.5 flex-1 min-w-0 overflow-x-scroll">
    <!-- Onglets fichiers -->
    <!-- Groupe agent -->
    <div data-v-3c3dc65a="" class="flex items-stretch gap-0.5 shrink-0">
      <!-- Onglet-agent (bouton principal du groupe) --><button data-v-3c3dc65a="" class="relative flex items-center gap-1.5 px-3 text-sm font-semibold transition-all select-none rounded-t shrink-0 cursor-pointer" style="color: rgb(235, 159, 112); background-color: rgb(66, 41, 26);"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-3 h-3 shrink-0 text-violet-500 dark:text-zinc-300">
          <polyline data-v-3c3dc65a="" points="2,5 6.5,8 2,11"></polyline>
          <line data-v-3c3dc65a="" x1="8.5" y1="11" x2="14" y2="11"></line>
        </svg><span data-v-3c3dc65a="" class="opacity-50 select-none">·</span><span data-v-3c3dc65a="" class="truncate max-w-[80px]">dev-front</span><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-2.5 h-2.5 shrink-0 transition-transform duration-150 -rotate-90">
          <path data-v-3c3dc65a="" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
        </svg>
        <!--v-if--><span data-v-3c3dc65a="" class="absolute bottom-0 left-0 right-0 h-[2px]" style="background-color: rgb(235, 159, 112);"></span>
      </button><!-- Sous-onglets session (masqués si groupe collapsé) --><button data-v-3c3dc65a="" class="relative flex items-center gap-1.5 px-4 min-w-[90px] text-sm font-medium transition-all select-none rounded-t shrink-0 cursor-pointer" style="color: rgb(235, 159, 112); background-color: rgb(66, 41, 26);" title="#1"><span data-v-3c3dc65a="" class="font-mono text-xs shrink-0">#1</span>
        <!--v-if--><span data-v-3c3dc65a="" class="flex items-center justify-center w-4 h-4 rounded opacity-40 hover:opacity-100 hover:text-red-400 hover:bg-black/20 transition-all text-xs cursor-pointer ml-4" title="Fermer">✕</span><span data-v-3c3dc65a="" class="absolute bottom-0 left-0 right-0 h-[2px]" style="background-color: rgb(235, 159, 112);"></span>
      </button>
    </div>
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
    </svg></button><!-- Bouton + WSL --><button data-v-3c3dc65a="" class="flex items-center gap-1.5 px-3 self-center text-sm font-semibold text-violet-700 bg-violet-500/15 hover:bg-violet-500/25 border border-violet-500/40 hover:border-violet-500/60 dark:text-violet-300 dark:border-violet-500/30 dark:hover:border-violet-500/50 rounded transition-all ml-1 mr-2 shrink-0 cursor-pointer" style="height: 28px;" title="Ouvrir un terminal WSL"><span data-v-3c3dc65a="" class="text-base leading-none">+</span><span data-v-3c3dc65a="">WSL</span></button>
  <div data-v-3c3dc65a="" class="w-3 shrink-0"></div>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: critical in_progress task with all badges 1`] = `
"<div class="bg-surface-secondary border border-edge-default rounded-lg p-3 hover:border-content-faint transition-colors cursor-pointer min-h-[120px] flex flex-col" draggable="true">
  <!-- Top row: title + effort/priority -->
  <div class="flex items-start justify-between gap-2 mb-2">
    <div class="flex items-start gap-1.5 flex-1 min-w-0"><span class="mt-1 shrink-0 w-2 h-2 rounded-full bg-cyan-400 animate-pulse" title="Tâche en cours d'exécution" aria-label="Tâche en cours d'exécution"></span>
      <p class="text-sm text-content-primary font-medium leading-snug min-w-0 break-words">Urgent Fix</p>
    </div>
    <div class="flex items-center gap-1 shrink-0">
      <!--v-if--><span class="text-xs font-bold px-1.5 py-0.5 rounded font-mono border bg-red-500/20 text-red-400 border-red-500/30">!!</span><span class="text-xs font-bold px-1.5 py-0.5 rounded font-mono border bg-red-500/20 text-red-400 border-red-500/30">L</span>
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <div class="flex flex-wrap gap-1 mb-2"><span class="text-xs px-1.5 py-0.5 rounded font-mono border" style="color: rgb(123, 197, 234); background-color: rgb(24, 43, 52); border-color: rgb(43, 77, 94);">back-electron</span><!-- Multi-agent avatars (≤3 + overflow badge) -->
    <!-- Fallback: single agent badge when no task_agents rows -->
    <agent-badge-stub name="dev-back" active="false"></agent-badge-stub>
  </div><!-- Footer: dates left, #id right -->
  <div class="flex items-end justify-between gap-2 mt-auto pt-2 border-t border-edge-default/50">
    <div class="flex flex-col gap-0.5">
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Créé</span> 01/01/26 00:00</p>
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Modifié</span> 01/01/26 00:00</p>
    </div><span class="text-xs text-content-faint font-mono shrink-0">#42</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: done task without agent or perimetre 1`] = `
"<div class="bg-surface-secondary border border-edge-default rounded-lg p-3 hover:border-content-faint transition-colors cursor-pointer min-h-[120px] flex flex-col" draggable="false">
  <!-- Top row: title + effort/priority -->
  <div class="flex items-start justify-between gap-2 mb-2">
    <div class="flex items-start gap-1.5 flex-1 min-w-0">
      <!--v-if-->
      <p class="text-sm text-content-primary font-medium leading-snug min-w-0 break-words">Completed Task</p>
    </div>
    <div class="flex items-center gap-1 shrink-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <!--v-if-->
  <!-- Footer: dates left, #id right -->
  <div class="flex items-end justify-between gap-2 mt-auto pt-2">
    <div class="flex flex-col gap-0.5">
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Créé</span> 01/01/26 00:00</p>
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Modifié</span> 01/01/26 00:00</p>
    </div><span class="text-xs text-content-faint font-mono shrink-0">#99</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: minimal todo task 1`] = `
"<div class="bg-surface-secondary border border-edge-default rounded-lg p-3 hover:border-content-faint transition-colors cursor-pointer min-h-[120px] flex flex-col" draggable="true">
  <!-- Top row: title + effort/priority -->
  <div class="flex items-start justify-between gap-2 mb-2">
    <div class="flex items-start gap-1.5 flex-1 min-w-0">
      <!--v-if-->
      <p class="text-sm text-content-primary font-medium leading-snug min-w-0 break-words">Simple Task</p>
    </div>
    <div class="flex items-center gap-1 shrink-0">
      <!--v-if-->
      <!--v-if--><span class="text-xs font-bold px-1.5 py-0.5 rounded font-mono border bg-emerald-500/20 text-emerald-400 border-emerald-500/30">S</span>
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <div class="flex flex-wrap gap-1 mb-2"><span class="text-xs px-1.5 py-0.5 rounded font-mono border" style="color: rgb(190, 228, 129); background-color: rgb(41, 50, 26); border-color: rgb(74, 91, 47);">front-vuejs</span><!-- Multi-agent avatars (≤3 + overflow badge) -->
    <!-- Fallback: single agent badge when no task_agents rows -->
    <agent-badge-stub name="dev-front" active="false"></agent-badge-stub>
  </div><!-- Footer: dates left, #id right -->
  <div class="flex items-end justify-between gap-2 mt-auto pt-2 border-t border-edge-default/50">
    <div class="flex flex-col gap-0.5">
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Créé</span> 01/01/26 00:00</p>
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Modifié</span> 01/01/26 00:00</p>
    </div><span class="text-xs text-content-faint font-mono shrink-0">#10</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TitleBar — snapshots > matches snapshot: maximized 1`] = `
"<div class="grid grid-cols-3 items-center h-9 bg-surface-base shrink-0">
  <!-- Left: App identity -->
  <div class="flex items-center gap-2 px-4">
    <div class="w-2 h-2 rounded-full bg-violet-500 shrink-0"></div><span class="text-xs font-semibold text-content-subtle tracking-widest uppercase">KanbAgent</span>
  </div><!-- Center: Search bar (always visible, VS Code style) -->
  <div class="flex justify-center"><button class="flex items-center gap-2 px-3 h-6 rounded-md bg-surface-secondary/80 border border-edge-default/50 text-content-subtle hover:text-content-tertiary hover:border-content-faint/80 hover:bg-surface-secondary transition-all duration-150 w-52 group" title="Rechercher une tâche (Ctrl+K)"><svg viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3 shrink-0">
        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.099zm-5.242 1.656a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"></path>
      </svg><span class="flex-1 text-left text-xs">Rechercher…</span><kbd class="text-[10px] text-content-dim group-hover:text-content-subtle font-mono leading-none">Ctrl+K</kbd></button></div><!-- Right: Window controls — Windows 11 style -->
  <div class="flex items-stretch h-full justify-end">
    <!-- Minimize --><button class="w-[46px] flex items-center justify-center text-content-subtle hover:text-content-primary hover:bg-surface-tertiary/60 transition-colors" title="Minimiser"><svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
        <rect x="0" y="4.5" width="10" height="1"></rect>
      </svg></button><!-- Maximize / Restore --><button class="w-[46px] flex items-center justify-center text-content-subtle hover:text-content-primary hover:bg-surface-tertiary/60 transition-colors" title="Restaurer">
      <!-- Restore: two overlapping squares --><svg width="11" height="11" viewBox="0 0 11 11" fill="none" stroke="currentColor" stroke-width="1">
        <rect x="3.5" y="0.5" width="7" height="7" rx="0.5"></rect>
        <path d="M0.5 3.5v7h7v-3"></path>
      </svg>
    </button><!-- Close --><button class="w-[46px] flex items-center justify-center text-content-subtle hover:text-white hover:bg-red-600 transition-colors" title="Fermer"><svg width="10" height="10" viewBox="0 0 10 10" stroke="currentColor" stroke-width="1.1" stroke-linecap="round">
        <line x1="0.5" y1="0.5" x2="9.5" y2="9.5"></line>
        <line x1="9.5" y1="0.5" x2="0.5" y2="9.5"></line>
      </svg></button>
  </div>
</div>"
`;

exports[`TitleBar — snapshots > matches snapshot: not maximized 1`] = `
"<div class="grid grid-cols-3 items-center h-9 bg-surface-base shrink-0">
  <!-- Left: App identity -->
  <div class="flex items-center gap-2 px-4">
    <div class="w-2 h-2 rounded-full bg-violet-500 shrink-0"></div><span class="text-xs font-semibold text-content-subtle tracking-widest uppercase">KanbAgent</span>
  </div><!-- Center: Search bar (always visible, VS Code style) -->
  <div class="flex justify-center"><button class="flex items-center gap-2 px-3 h-6 rounded-md bg-surface-secondary/80 border border-edge-default/50 text-content-subtle hover:text-content-tertiary hover:border-content-faint/80 hover:bg-surface-secondary transition-all duration-150 w-52 group" title="Rechercher une tâche (Ctrl+K)"><svg viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3 shrink-0">
        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.099zm-5.242 1.656a5.5 5.5 0 1 1 0-11 5.5 5.5 0 0 1 0 11z"></path>
      </svg><span class="flex-1 text-left text-xs">Rechercher…</span><kbd class="text-[10px] text-content-dim group-hover:text-content-subtle font-mono leading-none">Ctrl+K</kbd></button></div><!-- Right: Window controls — Windows 11 style -->
  <div class="flex items-stretch h-full justify-end">
    <!-- Minimize --><button class="w-[46px] flex items-center justify-center text-content-subtle hover:text-content-primary hover:bg-surface-tertiary/60 transition-colors" title="Minimiser"><svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor">
        <rect x="0" y="4.5" width="10" height="1"></rect>
      </svg></button><!-- Maximize / Restore --><button class="w-[46px] flex items-center justify-center text-content-subtle hover:text-content-primary hover:bg-surface-tertiary/60 transition-colors" title="Agrandir">
      <!-- Restore: two overlapping squares -->
      <!-- Maximize: single square --><svg width="10" height="10" viewBox="0 0 10 10" fill="none" stroke="currentColor" stroke-width="1">
        <rect x="0.5" y="0.5" width="9" height="9" rx="0.5"></rect>
      </svg>
    </button><!-- Close --><button class="w-[46px] flex items-center justify-center text-content-subtle hover:text-white hover:bg-red-600 transition-colors" title="Fermer"><svg width="10" height="10" viewBox="0 0 10 10" stroke="currentColor" stroke-width="1.1" stroke-linecap="round">
        <line x1="0.5" y1="0.5" x2="9.5" y2="9.5"></line>
        <line x1="9.5" y1="0.5" x2="0.5" y2="9.5"></line>
      </svg></button>
  </div>
</div>"
`;

exports[`ToastContainer — snapshots > matches snapshot: empty (no toasts) 1`] = `"<div class="fixed bottom-4 right-4 z-50 flex flex-col gap-2 max-w-sm pointer-events-none"></div>"`;

exports[`ToastContainer — snapshots > matches snapshot: three toast types (error, warn, info) 1`] = `
"<div class="fixed bottom-4 right-4 z-50 flex flex-col gap-2 max-w-sm pointer-events-none">
  <div class="flex items-start gap-2.5 px-3 py-2.5 rounded-lg border text-sm backdrop-blur-sm shadow-xl pointer-events-auto bg-red-100 dark:bg-red-900/90 border-red-300 dark:border-red-700/60 text-red-800 dark:text-red-200"><span class="shrink-0 text-xs font-mono mt-0.5">✕</span><span class="flex-1 leading-relaxed break-words min-w-0">Connection failed</span><button class="shrink-0 text-xs opacity-50 hover:opacity-100 transition-opacity mt-0.5">✕</button></div>
  <div class="flex items-start gap-2.5 px-3 py-2.5 rounded-lg border text-sm backdrop-blur-sm shadow-xl pointer-events-auto bg-amber-100 dark:bg-amber-900/90 border-amber-300 dark:border-amber-700/60 text-amber-800 dark:text-amber-200"><span class="shrink-0 text-xs font-mono mt-0.5">⚠</span><span class="flex-1 leading-relaxed break-words min-w-0">Slow response detected</span><button class="shrink-0 text-xs opacity-50 hover:opacity-100 transition-opacity mt-0.5">✕</button></div>
  <div class="flex items-start gap-2.5 px-3 py-2.5 rounded-lg border text-sm backdrop-blur-sm shadow-xl pointer-events-auto bg-surface-secondary/90 border-edge-default text-content-secondary"><span class="shrink-0 text-xs font-mono mt-0.5">ℹ</span><span class="flex-1 leading-relaxed break-words min-w-0">Changes saved</span><button class="shrink-0 text-xs opacity-50 hover:opacity-100 transition-opacity mt-0.5">✕</button></div>
</div>"
`;

exports[`ToggleSwitch — snapshots > matches snapshot: disabled state 1`] = `"<button type="button" role="switch" aria-checked="false" disabled="" class="relative shrink-0 w-10 h-5 rounded-full transition-colors duration-200 outline-none focus-visible:ring-2 focus-visible:ring-violet-500 disabled:opacity-40 disabled:cursor-not-allowed bg-surface-tertiary"><span class="absolute top-0.5 left-0.5 w-4 h-4 rounded-full bg-white shadow-sm transition-transform duration-200 translate-x-0"></span></button>"`;

exports[`ToggleSwitch — snapshots > matches snapshot: off state 1`] = `"<button type="button" role="switch" aria-checked="false" class="relative shrink-0 w-10 h-5 rounded-full transition-colors duration-200 outline-none focus-visible:ring-2 focus-visible:ring-violet-500 disabled:opacity-40 disabled:cursor-not-allowed bg-surface-tertiary"><span class="absolute top-0.5 left-0.5 w-4 h-4 rounded-full bg-white shadow-sm transition-transform duration-200 translate-x-0"></span></button>"`;

exports[`ToggleSwitch — snapshots > matches snapshot: on state 1`] = `"<button type="button" role="switch" aria-checked="true" class="relative shrink-0 w-10 h-5 rounded-full transition-colors duration-200 outline-none focus-visible:ring-2 focus-visible:ring-violet-500 disabled:opacity-40 disabled:cursor-not-allowed bg-violet-600"><span class="absolute top-0.5 left-0.5 w-4 h-4 rounded-full bg-white shadow-sm transition-transform duration-200 translate-x-5"></span></button>"`;
